<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zhuoyue.com.yanjiaohuidemo.activity.LoginActivity">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_gravity=""
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Phone_Num_Login"
            />
        <Button
            android:onClick="register_click"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@color/colorRed"
            android:text="去注册"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
    </LinearLayout>

     <EditText
         android:padding="10dp"
         android:hint="@string/Write_Phone"
         android:background="@drawable/shape"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="80dp"
         android:layout_width="match_parent"
         android:layout_height="60dp">
     </EditText>

    <EditText
        android:hint="密码"
        android:padding="10dp"
        android:background="@drawable/shape"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
    </EditText>

    <Button
        android:textColor="@color/colorWhite"
        android:background="@color/colorLightRed"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/Login"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:textColor="@color/colorRed"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forget_Password"
        />
    <LinearLayout
        android:layout_marginTop="40dp"
        android:gravity="center"
       android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:onClick="Sanfang_click"
            android:id="@+id/login_weibo"
            android:src="@drawable/weibo1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:onClick="Sanfang_click"
            android:id="@+id/login_qq"
            android:src="@drawable/qq1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:onClick="Sanfang_click"
            android:id="@+id/login_weichat"
            android:src="@drawable/weixin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:id="@+id/login_sms"
            android:onClick="Sanfang_click"
            android:src="@drawable/xinfeng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>


</LinearLayout>
