<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zhuoyue.com.yanjiaohuidemo.activity.PhoneRegistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity=""
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:onClick="back_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/jiantou"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="@string/Phone_Num_Register"
            />

        <Button
            android:onClick="register_click"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/colorRed"
            android:text="@string/Go_to_Register"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="手机号只用于安全登录，不会泄露的你的任何信息哦"

        />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:hint="请输入手机号"
        android:padding="10dp">
    </EditText>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp">
          <EditText
              android:id="@+id/register_num"
              android:hint="验证码"
              android:layout_gravity="center"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:background="@drawable/shape"
              android:layout_height="match_parent"/>
         <Button
             android:id="@+id/register_get_num"
             android:text="获取验证码"
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_width="120dp"
             android:layout_height="match_parent"/>

    </LinearLayout>

    <EditText
        android:password="true"
        android:id="@+id/register_pwd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:hint="@string/Password"
        android:padding="10dp">
    </EditText>

    <Button
        android:id="@+id/register_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorLightRed"
        android:text="@string/queren"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="使用以下账号直接登录"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/weibo1"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/qq1"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/weixin"
            />
    </LinearLayout>


</LinearLayout>
